[package]
name = "rust"
version = "0.1.0"
authors = ["Seok Won <ikr@kakao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.26", features = ["cmake-build", "sasl", "ssl"] }